--- a/admin/package.json
+++ b/admin/package.json
@@ -16,14 +16,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "sweetalert2": "^11.12.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts test"
-  }
-,  
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
