--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.9",
+    "rsuite": "^5.65.0",
     "sweetalert2": "^11.12.0",
     "web-vitals": "^1.0.1"
   },
