--- a/admin/package.json
+++ b/admin/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api/"
+  "proxy": "https://movie-app-gamma-ruby.vercel.app/"
 }
