--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/api/"
+  "proxy": "https://movie-app-gamma-ruby.vercel.app/"
 }
