cors settingd changed

--- a/admin/package.json
+++ b/admin/package.json
@@ -43,5 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://movie-app-gamma-ruby.vercel.app/"
+  "proxy": "https://movie-app-api-two.vercel.app/"
 }
