--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
+     "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
     "test": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts test"
   },
   "eslintConfig": {
@@ -39,13 +39,7 @@
       "last 1 safari version"
     ]
   },
-
-  "vercel": {
-    "build": {
-      "env": {
-        "NODE_OPTIONS": "--openssl-legacy-provider"
-      }
-    }
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
-
