--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://movie-app-api-two.vercel.app/api",
+  "proxy": "https://movie-app-a4bl.onrender.com/api/",
   "vercel": {
     "build": {
       "env": {
